# price_parser

./: .gitignore  pyproject.toml  readme.md  ~$positiv_products.xlsx
app/: logging_config.py  main.py
app/core/: error_handler.py
app/parsers/: etm.py  ozon.py  parser.py  positiv.py  tdrubin.py  vseinstrumenti.py
app/parsers/positiv/: excel_writer.py  positiv.py
app/schemas/positiv/: category.py  product.py
app/utils/: run_parser_with_retry.py
schemas/: categories.json  positiv.py  product.json
